--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sandbox",
+  "name": "new-theme",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
-    "sass": "^1.35.0"
-  }
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "autoprefixer": "^10.3.1",
+    "parcel": "^2.0.0-nightly.769",
+    "postcss": "^8.3.5",
+    "postcss-import": "^14.0.2",
+    "postcss-modules": "^4.1.3",
+    "sass": "^1.35.2",
+    "tailwindcss": "^2.2.4"
+  },
+  "dependencies": {}
 }
