--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html src/blog/index.html src/app/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
